[package]
name = "luffy"
version = "0.1.0"
authors = ["James Ni"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.34"
thiserror = "1.0.22"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
clap = "2.33.3"
nameof = "1.2.1"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.42"
