[package]
name = "cli_handler"
version = "0.1.0"
authors = ["Limegrass <james@niis.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luffy_core = { version = "0.1.0", path = "../luffy_core" }
luffy_gitea = { version = "0.1.0", path = "../luffy_gitea" }
async-trait = "0.1.42"
log = "0.4.11"
